# MartesMartesBot

./: .gitignore  Dockerfile  MartesMartesBot.cabal  README.md  docker-compose.yml  stack.yaml
app/: Main.hs
etc/: access_token
src/: Aphorisms.hs  Burgeon.hs  Gruel.hs  Lib.hs
thurk/: MartesMartesBot.cabal  stack.yaml
thurk/src/: Aphorisms.hs  Burgeon.hs  Gruel.hs  Savant.hs  Utils.hs
