name:                MartesMartesBot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/MartesMartesBot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Gruel
                     , Savant
                     , Aphorisms
                     , Burgeon
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-compat
                     , wai
                     , warp
                     , servant-server >= 0.9 && < 0.11
                     , mtl
                     , http-client
                     , http-client-tls
                     , telegram-api >= 0.6.3.0
                     , text
                     , transformers
                     , transformers-compat
                     , template-haskell >= 2.8 && < 2.13
                     , ghc-prim >= 0.3 && < 0.6
                     , deepseq >= 1.3 && < 1.5
                     , random
                     , filepath
                     , directory
                     , regex-posix
                     , cryptohash
                     , bytestring
                     , hedis
  default-language:    Haskell2010

executable MartesMartesBot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MartesMartesBot
  default-language:    Haskell2010

test-suite MartesMartesBot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MartesMartesBot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/MartesMartesBot
